# gltest

./: .gitignore  CMakeLists.txt  ogl.kdev4  testshader.fs
inc/Shader/: Shader.h
inc/glad/: glad.h
inc/utils/: utils.h
shaders/: CMakeLists.txt  orange.glsl
src/: CMakeLists.txt  gltest.cpp
src/Shader/: CMakeLists.txt  Shader.cpp
src/glad/: CMakeLists.txt  glad.c
src/utils/: CMakeLists.txt  utils.cpp
